Update OCR Passport&House_Registry

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ debug_crops/
 ocr_raw.txt
 ocr_result.txt
 results_filter
+ocr_result_house_registration.txt
+ocr_result_passport.txt
+ocr_raw_house_registration.txt
+ocr_raw_passport.txt
